--- a/index.html
+++ b/index.html
@@ -33,6 +33,50 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
-    
+    <script type="text/javascript">
+    const pyramids = document.querySelector(".pyramids");
+    const palace = document.querySelector(".palace");
+    const logo = document.querySelector(".logo");
+    const nav = document.querySelector("nav");
+    const info = document.querySelector(".info");
+
+    //reveal elements on page loading
+    window.addEventListener("load", () => {
+      pyramids.style.transform = "translateX(0)";
+      palace.style.transform = "translateX(0)";
+      logo.style.transform = "translateY(0)";
+      nav.style.transform = "translateY(0)";
+
+      setTimeout(() => {
+        info.style.transform = "translateY(0)";
+        info.style.opacity = "1";
+      }, 500);
+    });
+
+    //scrolling effects on website elements
+    window.addEventListener("scroll", () => {
+      const scrollVal = window.scrollY;
+
+      pyramids.style.left = scrollVal * -0.25 + "px";
+      palace.style.left = scrollVal * 0.25 + "px";
+      info.style.marginTop = scrollVal * 1.1 + "px";
+
+      pyramids.style.transition = "0s";
+      palace.style.transition = "0s";
+      info.style.transition = "0s";
+    });
+
+    //hide and display home info on scrolldown and up
+    window.onscroll = function(){
+      if(document.body.scrollTop > 500 || document.documentElement.scrollTop > 500){
+        info.style.opacity = "0";
+        info.style.transition = "0.6s";
+      }
+      else{
+        info.style.opacity = "1";
+        info.style.transition = "0.6s";
+      }
+    }
+    </script>
   </body>
 </html>
